import { Service, Inject } from "typedi";
import { Logger } from "winston";
import IVesselVisitExecutionService from "./IServices/IVesselVisitExecutionService";
import IVesselVisitExecutionRepo from "./IRepos/IVesselVisitExecutionRepo";
import { IVesselVisitExecutionDTO } from "../dto/IVesselVisitExecutionDTO";
import { Result } from "../core/logic/Result";
import { VesselVisitExecution } from "../domain/vesselVisitExecution/vesselVisitExecution";
import { VesselVisitExecutionCode } from "../domain/vesselVisitExecution/vesselVisitExecutionCode";
import { BusinessRuleValidationError } from "../core/logic/BusinessRuleValidationError";
import VvnService from "./ExternalData/vvnService";
import VesselVisitExecutionMap from "../mappers/VesselVisitExecutionMap";
import {VesselVisitExecutionId} from "../domain/vesselVisitExecution/vesselVisitExecutionId";
import {VVEError} from "../domain/vesselVisitExecution/errors/vveErrors";
import OperationPlanRepo from "../repos/operationPlanRepo";
import {CTError} from "../domain/complementaryTask/errors/ctErrors";

@Service()
export default class VesselVisitExecutionService implements IVesselVisitExecutionService {

    constructor(
        @Inject("VesselVisitExecutionRepo")
        private repo: IVesselVisitExecutionRepo,

        @Inject(() => VvnService)
        private vvnService: VvnService,

        @Inject("logger")
        private logger: Logger,

        @Inject('VesselVisitExecutionMap')
        private vesselVisitExecutionMap: VesselVisitExecutionMap,
        
        @Inject("OperationPlanRepo")
        private operationPlanRepo: OperationPlanRepo
) {}

    public async createAsync(dto: IVesselVisitExecutionDTO): Promise<Result<IVesselVisitExecutionDTO>> {
        this.logger.info("Creating Vessel Visit Execution (VVE)");

        const externalVvn = await this.vvnService.fetchById(dto.vvnId);
        if (!externalVvn) {
            throw new BusinessRuleValidationError("VVN not found in the System");
        }

        const existingVve = await this.repo.findByVvnId(dto.vvnId);
        if (existingVve) {
            throw new BusinessRuleValidationError("Já existe um registo de execução para esta visita.");
        }

        const code = await this.generateCodeAsync();

        const vve = VesselVisitExecution.create({
            code: code,
            vvnId: dto.vvnId,
            vesselImo: externalVvn.vesselImo,
            actualArrivalTime: new Date(dto.actualArrivalTime),
            creatorEmail: dto.creatorEmail,
            status: "In Progress",
        });

        const savedVve = await this.repo.save(vve);

        return Result.ok<IVesselVisitExecutionDTO>(this.vesselVisitExecutionMap.toDTO(savedVve));
    }
    public async getAllAsync(): Promise<Result<IVesselVisitExecutionDTO[]>> {
        this.logger.debug("A procurar todos os registos de Vessel Visit Execution (VVE)");

        try {
            const vves = await this.repo.findAll();
            const vvesDto = vves.map(vve => this.vesselVisitExecutionMap.toDTO(vve));

            return Result.ok<IVesselVisitExecutionDTO[]>(vvesDto);
        } catch (e) {
            this.logger.error("Erro ao listar VVEs: %o", e);
            // @ts-ignore
            return Result.fail<IVesselVisitExecutionDTO[]>(e.message);
        }
    }

    public async getByIdAsync(id: VesselVisitExecutionId): Promise<Result<IVesselVisitExecutionDTO>> {

        const vve = await this.repo.findById(id);
        if (!vve) {
            throw new BusinessRuleValidationError(
                VVEError.NotFound,
                "VVE not found",
                `No VVE found with id ${id}`
            );
        }

        return Result.ok(this.vesselVisitExecutionMap.toDTO(vve));
    }

    public async getByCodeAsync(code: VesselVisitExecutionCode): Promise<Result<IVesselVisitExecutionDTO>> {

        const vve = await this.repo.findByCode(code);
        if (!vve) {
            throw new BusinessRuleValidationError(
                VVEError.NotFound,
                "VVE not found",
                `No VVE found with code ${code}`
            );
        }

        return Result.ok(this.vesselVisitExecutionMap.toDTO(vve));
    }

    public async getByImoAsync(imo: string): Promise<Result<IVesselVisitExecutionDTO[]>> {
        const vve = await this.repo.findByImo(imo);
        return Result.ok(vve.map(v => this.vesselVisitExecutionMap.toDTO(v)));
    }

    public async getInRangeAsync(timeStart: Date, timeEnd: Date): Promise<Result<IVesselVisitExecutionDTO[]>> {

        if (timeStart >= timeEnd) {
            throw new BusinessRuleValidationError(
                VVEError.InvalidTimeRange,
                "Start time must be before end time",
                `timeStart=${timeStart.toISOString()} timeEnd=${timeEnd.toISOString()}`
            );
        }

        const tasks = await this.repo.getAllInDateRange(timeStart, timeEnd);
        return Result.ok(tasks.map(t => this.vesselVisitExecutionMap.toDTO(t)));
    }

    //METODOS AUXILIARES

    private async generateCodeAsync(): Promise<VesselVisitExecutionCode> {
        const sequence = await this.repo.getNextSequenceNumber();
        const formattedSequence = sequence.toString().padStart(6, '0');
        const year = new Date().getFullYear().toString();

        // (ex: VVE2025000001)
        const codeValue = `VVE${year}${formattedSequence}`;

        return VesselVisitExecutionCode.create(codeValue);
    }

    public async updateBerthAndDockAsync(
        id: VesselVisitExecutionId,
        actualBerthTime: Date,
        actualDockId: string,
        updaterEmail: string
    ): Promise<Result<IVesselVisitExecutionDTO>> {

        const vve = await this.repo.findById(id);
        if (!vve) {
            throw new BusinessRuleValidationError(
                VVEError.NotFound,
                "VVE not found",
                `No VVE found with id ${id}`
            );
        }

        const externalVvn = await this.vvnService.fetchById(vve.vvnId);
        if (!externalVvn) {
            throw new BusinessRuleValidationError("VVN not found in the System");
        }

        const plannedDockId =
            (externalVvn as any).dockId ??
            (externalVvn as any).dock ??
            (externalVvn as any).assignedDockId;

        let note: string | undefined = undefined;
        if (plannedDockId && plannedDockId !== actualDockId) {
            note = `Actual dock '${actualDockId}' differs from planned dock '${plannedDockId}'`;
        }

        vve.updateBerthAndDock(new Date(actualBerthTime), actualDockId, updaterEmail, note);

        await this.repo.save(vve);

        this.logger.info("Updated VVE berth time and dock", {
            vveId: id.toString(),
            actualBerthTime: new Date(actualBerthTime).toISOString(),
            actualDockId,
            plannedDockId,
            updaterEmail
        });

        return Result.ok(this.vesselVisitExecutionMap.toDTO(vve));
    }

    public async updateExecutedOperationsAsync(
        id: VesselVisitExecutionId,
        operations: Array<{
            plannedOperationId: string;
            actualStart?: string | Date;
            actualEnd?: string | Date;
            resourcesUsed?: Array<{ resourceId: string; quantity?: number; hours?: number }>;
            note?: string;
            status?: "started" | "completed" | "delayed";
        }>,
        operatorId: string
    ): Promise<Result<IVesselVisitExecutionDTO>> {

        const vve = await this.repo.findById(id);
        if (!vve) {
            throw new BusinessRuleValidationError(
                VVEError.NotFound,
                "VVE not found",
                `No VVE found with id ${id}`
            );
        }

        const normalizedOps = operations.map(op => ({
            plannedOperationId: op.plannedOperationId,
            actualStart: op.actualStart ? new Date(op.actualStart) : undefined,
            actualEnd: op.actualEnd ? new Date(op.actualEnd) : undefined,
            resourcesUsed: op.resourcesUsed ?? [],
            note: op.note,
            status: op.status
        }));

        vve.updateExecutedOperations(normalizedOps, operatorId);

        await this.repo.save(vve);

        const plan = await this.operationPlanRepo.findLatestByVvnId(vve.vvnId);

        if (plan) {
            const now = Date.now();

            const plannedOps = plan.operations.filter(o => o.vvnId === vve.vvnId);

            const executedByKey = new Map<string, any>();
            for (const ex of vve.executedOperations) {
                executedByKey.set(ex.plannedOperationId, ex);
            }

            const updatedPlannedOps = plannedOps.map(op => {
                const key = `${op.vvnId}:${op.startTime}`;
                const ex = executedByKey.get(key);

                if (!ex) return op;

                const actualStartTime = ex.actualStart ? new Date(ex.actualStart).getTime() : undefined;
                const actualEndTime = ex.actualEnd ? new Date(ex.actualEnd).getTime() : undefined;

                let executionStatus: "started" | "completed" | "delayed" =
                    ex.status ?? (actualEndTime ? "completed" : "started");

                if (actualEndTime !== undefined && op.endTime !== undefined && actualEndTime > op.endTime) {
                    executionStatus = "delayed";
                }

                return {
                    ...op,
                    executionStatus,
                    actualStartTime,
                    actualEndTime,
                    resourcesUsed: ex.resourcesUsed ?? [],
                    executionUpdatedAt: now,
                    executionUpdatedBy: ex.updatedBy,
                    executionNote: ex.note
                };
            });

            const updateResult = plan.updateForVvn(vve.vvnId, updatedPlannedOps);

            if (updateResult.isSuccess) {
                await this.operationPlanRepo.save(plan);
            } else {
                this.logger.warn("Could not sync execution to operation plan", {
                    vvnId: vve.vvnId
                });
            }
        }

        return Result.ok(this.vesselVisitExecutionMap.toDTO(vve));
    }

    
    public async setCompletedAsync(
    code: VesselVisitExecutionCode,
    actualUnBerthTime: Date,
    actualLeavePortTime: Date,
    updaterEmail: string
    ): Promise<Result<IVesselVisitExecutionDTO>> {

        const vve = await this.repo.findByCode(code);
        if (!vve) {
            return Result.fail<IVesselVisitExecutionDTO>(`No VVE found with code ${code.toString()}`);
        }

        try {

            //validation is made in the domain class
            vve.setCompleted(actualUnBerthTime, actualLeavePortTime, updaterEmail);
            await this.repo.save(vve);

            this.logger.info("VVE marked as completed", {
                vveId: code.toString(),
                actualUnBerthTime: actualUnBerthTime.toISOString(),
                actualLeavePortTime: actualLeavePortTime.toISOString(),
                updaterEmail
            });

            return Result.ok(this.vesselVisitExecutionMap.toDTO(vve));
        } catch (err: any) {
            this.logger.error("Failed to complete VVE", { error: err });
            return Result.fail<IVesselVisitExecutionDTO>(err.message);
        }
    }



}